# drawcpp

./: CMakeLists.txt  run
shaders/: simple.frag  simple.vert
src/: main.cpp
